# Vocal

./: .gitignore  .mkdocs.yml  .python-version  404.html  index.html  initialize_blog.sh  mkdocs.yml  mkslides.yml  pyproject.toml  qihang.mkdocs.yml  sitemap.xml
.github/workflows/: deploy.yml  receive-update.yml
2025/09/15/: example-in-vocal.html
Vocal/: index.html
Vocal/2025/09/15/: example-in-vocal.html
Vocal/archive/: 2025.html
Vocal/category/: random-thoughts.html
archive/: 2025.html
assets/: references.bib
category/: random-thoughts.html
docs/: index.md
docs/Vocal/posts/: example_in_vocal.md
docs/Vocal/posts/published/: example_in_vocal.md  test.md
docs/assets/: references.bib
docs/posts/: example_in_vocal.md
overrides/partials/: comments.html
search/: search_index.js  search_index.json
