[project]
name = "customized_mkdocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "html-to-markdown>=1.13.0",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-nav>=3.2.0",
    "mkdocs-bibtex>=4.2.5",
    "mkdocs-callouts>=1.16.0",
    "mkdocs-material>=9.6.11",
    "mkslides>=1.0.10",
]
